# ss_DeepGA

./: .gitignore  DeepGA_Main.ipynb  pyproject.toml
DeepGA/: DataReader.py  Decoding.py  DistributedTraining.py  MOWang.py  Operators.py  WangDecoding.py  WangEncoding.py
ss_deepga/: run_evolution.py  stratified_loaders.py
ss_deepga/DeepGA/: DeepGA.py  DistributedTraining.py  EncodingClass.py  LICENSE  MODeepGA.py  Operators.py  README.md  WangDeepGA.py  WangOperators.py
ss_deepga/load_model/: load_pkl.py
ss_deepga/utils/: constant.py  matrix.py  save_result.py  show_layout_classes.py
