[project]
name = "ss-deepga"
version = "0.1.0"
description = ""
authors = [
    {name = "King-navi",email = "168604098+King-Navi@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "torch (>=2.9.1,<3.0.0)",
    "torchvision (>=0.24.1,<0.25.0)",
    "torchaudio (>=2.9.1,<3.0.0)",
    "torchtext (>=0.18.0,<0.19.0)",
    "pytorch-forecasting (>=1.5.0,<2.0.0)",
    "mlxtend (>=0.24.0,<0.25.0)",
    "torchmetrics (>=1.8.2,<2.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
